Update release posts (#1097)
* blog: Add sunos x64 to v6.9.2

* blog: Add sunos x64 to v4.7.0

* blog: Add sunos x64 to v4.6.2

* blog: update post for v4.7.1

While promoting additional platforms for v4.7.1 after the release, the tarballs
on the release server were overwritten and now have different shasums. In order
to remove any ambiguity around the release we have opted to do a semver patch
release, v4.7.2, with no changes.

This includes a number of things

* a cavaet about v4.7.2
* the download link for sunos
* the original shas
* the shas currently found on nodejs.org

* blog: update v4.7.2 post

the original post did not include the cavaet

* blog: update post for v6.9.3

While promoting additional platforms for v6.9.3 after the release, the tarballs
on the release server were overwritten and now have different shasums. In order
to remove any ambiguity around the release we have opted to do a semver patch
release, v6.9.4, with no changes.

This includes a number of things

* a cavaet about v6.9.4
* the download link for sunos
* the original shas
* the shas currently found on nodejs.org

--- a/locale/en/blog/release/v4.6.2.md
+++ b/locale/en/blog/release/v4.6.2.md
@@ -249,10 +249,8 @@ Linux 32-bit Binary: https://nodejs.org/dist/v4.6.2/node-v4.6.2-linux-x86.tar.xz
 Linux 64-bit Binary: https://nodejs.org/dist/v4.6.2/node-v4.6.2-linux-x64.tar.xz<br>
 Linux PPC LE 64-bit Binary: https://nodejs.org/dist/v4.6.2/node-v4.6.2-linux-ppc64le.tar.xz<br>
 Linux PPC BE 64-bit Binary: https://nodejs.org/dist/v4.6.2/node-v4.6.2-linux-ppc64.tar.xz<br>
-Linux s390x 64-bit Binary: *Coming soon*<br>
-AIX 64-bit Binary: *Coming soon*<br>
-SunOS 32-bit Binary: https://nodejs.org/dist/v4.6.2/node-v4.6.2-sunos-x86.tar.xz<br>
-SunOS 64-bit Binary: *Coming soon*<br>
+SunOS 32-bit Binary: https://nodejs.org/dist/v4.6.2/node-v4.6.2-sunos-x86.tar.xz<br><br>
+SunOS 64-bit Binary: https://nodejs.org/dist/v4.6.2/node-v4.6.2-sunos-x64.tar.xz<br>
 ARMv6 32-bit Binary: https://nodejs.org/dist/v4.6.2/node-v4.6.2-linux-armv6l.tar.xz<br>
 ARMv7 32-bit Binary: https://nodejs.org/dist/v4.6.2/node-v4.6.2-linux-armv7l.tar.xz<br>
 ARMv8 64-bit Binary: https://nodejs.org/dist/v4.6.2/node-v4.6.2-linux-arm64.tar.xz<br>
@@ -285,6 +283,8 @@ f4581c5de35968b8998f3d4761141cdd662450e6cbf0712150ca125649559091  node-v4.6.2-li
 6f992d823873eebb6cb99c96f5ac4f0dd8a205824bb4a54beb93eb60f7ca22eb  node-v4.6.2-linux-x86.tar.gz
 1a6e5e2c671637182c66b5c26c576fe228055a9ddaf16f1492c56a155fa3a810  node-v4.6.2-linux-x86.tar.xz
 a25a61f920ca6406e525d955b89ac6347a2d9dc1d80ae6cc0f6ceb50fb8d5e30  node-v4.6.2.pkg
+d5e4c9f3b1a9d9756a81ea810cf2bfd8de8263cae1e9e1b558584637503f0d15  node-v4.6.2-sunos-x64.tar.gz
+6fa50de72dbcdbc1372839c01184da584493301f274f4bb94dc83e56ed0c4c4c  node-v4.6.2-sunos-x64.tar.xz
 22c32dcfd70e556a01bb13648f240b4911cf990f1682985d4c311ecd8addcb21  node-v4.6.2-sunos-x86.tar.gz
 9f7c5c60daa9f69487e6bd40b8cfe89254482302053751b04dc773d8178592e9  node-v4.6.2-sunos-x86.tar.xz
 3c8f3af398c348cdf90fef9b983e4b46aae96a56238236542925e0bb4ee27ee8  node-v4.6.2.tar.gz
@@ -305,13 +305,13 @@ fb4da42d970192a805df211b53832e3e96a58a22a92b7116b8749b7d87561dd3  win-x86/node.l
 313da37cd7efda81a1e7a381a2b98041a2409a778e208899f248fd66216863f8  win-x86/node_pdb.zip
 -----BEGIN PGP SIGNATURE-----
 
-iQEcBAEBCAAGBQJYIimTAAoJEJM7AfQLXKlG8XcH/Ah7jCW9/p8CSKV3Pps5+HDc
-FIeQk8EannnEgX/FRhGfGsQwqI8aX0V2ocD7RB8CTh58CsBj+/W9KFSra0PLPe/i
-JXI1yrPR/owpyZSbtGyBMHigyKa1U6H1gSRWQ/2Iu0hr5eX58cVtbv3CPvgv69hA
-/r2GgfNeoWLfq2XTliADSTZNTrz0xhV2pkT7A2TZP3fs3Ff60ZD9maefJtLDdoM6
-OiF2jrNE8bPzgDmtfYFFSGuqnDr+bwcKpyMpJsqXceGEsXAm2Prhce8yUGY278vU
-4t5NQgtUx2BH7WrwEzbEBt+AwrD7J53XwdmN6FpZTdobDRWIhBCogDUgwAEEZGA=
-=U59v
+iQEcBAEBCAAGBQJYbopHAAoJEJM7AfQLXKlGMgAH/04odpZVHOb4arZhTVkkWSUa
+EZf5/ViWM/zBhXQIIbMIfxCo0pUTVGFp3UroDv55l4ya+Utaukk0TulmkSPqJ9Q6
+9R+9wOWLludenDqfxaXdMnw0tGmqzB9wxAG/gxfZuqOurzKpU2MRASlOgVydh10g
+/5YWc0TbZs/qCHrXL3jiYNZAhqik5Sq2+xeavHaw5ET5ivBGs659kla7VescLoYJ
+7/t6vas2GeLDRuEI024nFnQVyqatHDn1pZhkwM+Gcf5OESNPjKoRsSuxf4pNocgO
+oFJveFaXq6dLMiNDgRr4qE61pR3o9Qem0P/q2uTXpa2qkD22DwAiDa6yF0+h8rM=
+=dr9d
 -----END PGP SIGNATURE-----
 
 ```
