--- a/locale/en/blog/release/v4.7.0.md
+++ b/locale/en/blog/release/v4.7.0.md
@@ -147,10 +147,8 @@ Linux 32-bit Binary: https://nodejs.org/dist/v4.7.0/node-v4.7.0-linux-x86.tar.xz
 Linux 64-bit Binary: https://nodejs.org/dist/v4.7.0/node-v4.7.0-linux-x64.tar.xz<br>
 Linux PPC LE 64-bit Binary: https://nodejs.org/dist/v4.7.0/node-v4.7.0-linux-ppc64le.tar.xz<br>
 Linux PPC BE 64-bit Binary: https://nodejs.org/dist/v4.7.0/node-v4.7.0-linux-ppc64.tar.xz<br>
-Linux s390x 64-bit Binary: *Coming soon*<br>
-AIX 64-bit Binary: *Coming soon*<br>
 SunOS 32-bit Binary: https://nodejs.org/dist/v4.7.0/node-v4.7.0-sunos-x86.tar.xz<br>
-SunOS 64-bit Binary: *Coming soon*<br>
+SunOS 64-bit Binary: https://nodejs.org/dist/v4.7.0/node-v4.7.0-sunos-x64.tar.xz<br>
 ARMv6 32-bit Binary: https://nodejs.org/dist/v4.7.0/node-v4.7.0-linux-armv6l.tar.xz<br>
 ARMv7 32-bit Binary: https://nodejs.org/dist/v4.7.0/node-v4.7.0-linux-armv7l.tar.xz<br>
 ARMv8 64-bit Binary: https://nodejs.org/dist/v4.7.0/node-v4.7.0-linux-arm64.tar.xz<br>
@@ -183,6 +181,8 @@ c146aa3148cb8820a68d27ed835b758b0920eb49ed5b645e202ca24de8caf5ff  node-v4.7.0-li
 1544091040e4fda22e3d9519115f3719e9f3958467c35cb213211db98d145cab  node-v4.7.0-linux-x86.tar.gz
 d2650879dc8d85032d10f51cd81a15216af200f9263eb962d4652a8ed9e711a9  node-v4.7.0-linux-x86.tar.xz
 4eb81ba5e1302841e2eef0d76076ee0be4260ad9a94fce6830116cec75530282  node-v4.7.0.pkg
+f871b571a870ec0a95b5cdd851115b4f1ecefb4d4a7a41c884c060561c21b306  node-v4.7.0-sunos-x64.tar.gz
+0f58b161707b32d0cb7c533387f5574e504e367439c05703cafcc8765a92dd5f  node-v4.7.0-sunos-x64.tar.xz
 c41482d7ccf9fa95408980e22baf44094e073a14a354bb5241a39dfec9574942  node-v4.7.0-sunos-x86.tar.gz
 3cd29cc7d5fa0d88739a6a0f164b9822e47e08f85697aac1f8397959ff648bec  node-v4.7.0-sunos-x86.tar.xz
 0bc45fc02e425746001a8f012d6781fa5da6e629a43654c84ab7e767368fec61  node-v4.7.0.tar.gz
@@ -202,15 +202,14 @@ a39a4c1a1423c910d4a216dc93bcec8c7b83ed9c6604060c5ad3fa73173619df  win-x64/node_p
 f0c763f445600689616c790d44138c2de50bc44f93965c5c2b483c846870df86  win-x86/node_pdb.7z
 85178d436b1ec0cfd890cb0d2fc9545068054f7adee418f8b46557aaf4ede60b  win-x86/node_pdb.zip
 -----BEGIN PGP SIGNATURE-----
-Comment: GPGTools - https://gpgtools.org
 
-iQEcBAEBCAAGBQJYRxl+AAoJEJM7AfQLXKlGUAMH/R087ZZnCoOLJ1Ps4qUkzCmG
-d9zRTWWxkwGaBbGeaSyOBlL6sZpJy5JRhVFedo1Gr3m0bSdbVxx6tgjWutmuiNRG
-poP8c9PCRWsOZtbNvXC81TDmexUFKyI10n10MeAoGWTOqmy/TpIlEvpc7+J0hUdm
-utYrdvjJYgwpxQnFHnKdN0ksT8nS5lkwUtc7qF6aiK/fbn46tYmzLTrbJ8H0hoJ5
-Xa8amMAgnV2cMda+mIbK18ty//EHfm8O8ORDaElmt5hrCvRDME2KofMjuI80ok1C
-80YWrebMi+T/j5MJYn8H6VEplVVJjMeMnAgG6mCycUQrsBxx5grwe3qeCJiUYtY=
-=BpSZ
+iQEcBAEBCAAGBQJYbopmAAoJEJM7AfQLXKlGbHgH/3qNfttJafhVzEPAn3O1Urj7
+LmdA9KMqUgbKKEsb3maereMAtbt2sGQeSCzUl65SMVSPFYKJj1iFvvOQAxeqB8kA
+moFo7QQZNvdQZtieF+hR9Pe/zZRm91ugxSWqogPtZgv0QP+3eDDIbYai8393gVWo
+rUNl/6Uafq5yj+DSphU62GRyHluo2+msMq2tHa0Qn4VEfo9LVqMiaBXaU66tfRH9
+upyVui89hDpjS6fleV/G1A4PkqIach6+MNKOlL69Vb9tNGyH6QimkU8n0CQmnAW6
+NV5GN8R2Iupewsd/cK1GRikbAXG7s1vvbOpl59XYgWqgfONhAkv4yB7c9+OXfqk=
+=VLPP
 -----END PGP SIGNATURE-----
 
 ```
