--- a/locale/en/blog/release/v4.7.1.md
+++ b/locale/en/blog/release/v4.7.1.md
@@ -8,6 +8,11 @@ layout: blog-post.hbs
 author: Myles Borins
 ---
 
+While promoting additional platforms for v4.7.1 after the release, the tarballs
+on the release server were overwritten and now have different shasums. In order
+to remove any ambiguity around the release we have opted to do a semver patch
+release, v4.7.2, with no changes.
+
 ### Notable Changes
 
 * **build**: shared library support is now working for AIX builds (Stewart Addison) [#9675](https://github.com/nodejs/node/pull/9675)
@@ -207,10 +212,8 @@ Linux 32-bit Binary: https://nodejs.org/dist/v4.7.1/node-v4.7.1-linux-x86.tar.xz
 Linux 64-bit Binary: https://nodejs.org/dist/v4.7.1/node-v4.7.1-linux-x64.tar.xz<br>
 Linux PPC LE 64-bit Binary: https://nodejs.org/dist/v4.7.1/node-v4.7.1-linux-ppc64le.tar.xz<br>
 Linux PPC BE 64-bit Binary: https://nodejs.org/dist/v4.7.1/node-v4.7.1-linux-ppc64.tar.xz<br>
-Linux s390x 64-bit Binary: *Coming soon*<br>
-AIX 64-bit Binary: *Coming soon*<br>
 SunOS 32-bit Binary: https://nodejs.org/dist/v4.7.1/node-v4.7.1-sunos-x86.tar.xz<br>
-SunOS 64-bit Binary: *Coming soon*<br>
+SunOS 64-bit Binary: https://nodejs.org/dist/v4.7.1/node-v4.7.1-sunos-x64.tar.xz<br>
 ARMv6 32-bit Binary: https://nodejs.org/dist/v4.7.1/node-v4.7.1-linux-armv6l.tar.xz<br>
 ARMv7 32-bit Binary: https://nodejs.org/dist/v4.7.1/node-v4.7.1-linux-armv7l.tar.xz<br>
 ARMv8 64-bit Binary: https://nodejs.org/dist/v4.7.1/node-v4.7.1-linux-arm64.tar.xz<br>
@@ -219,7 +222,7 @@ Other release files: https://nodejs.org/dist/v4.7.1/<br>
 Documentation: https://nodejs.org/docs/v4.7.1/api/
 
 <h3 id="shasums">SHASUMS</h3>
-
+<h4> The Original SHASUMS </h4>
 ```
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
@@ -270,6 +273,63 @@ LNb4qXW1Fdd7d+kYRnG6dO3+1GEs1rDJAHGYswJq3MEHj29ZU7azKgBkHpkLYAco
 RNItvr99s2mYREnPIvEgwm1qxHN8Z/f1wWNqLkGSibLNXrMgWKAVNqi+WQ1gxYqA
 z0p3tvpVaqsXPiGF82Eja1mXpFk5iiuC43fuL6QS8/LAA5A2rxzVqgO8lB89WMU=
 =WUoR
+-----END PGP SIGNATURE-----
+
+```
+
+<h4> The Current SHASUMS </h4>
+```
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
+4567240caa1c59e702a42704f3af2c79df488a139dd8ab37cf0fce24b5f74020  node-v4.7.1-darwin-x64.tar.gz
+c4f00486231565b38a34fc0eab57a04d40a0778fb46fecca3de1e99fa5eac24b  node-v4.7.1-darwin-x64.tar.xz
+65662b3bb57577e7a8fa254522befa688620a786d2648061900050ade00d33f5  node-v4.7.1-headers.tar.gz
+1a4e8471cd7e3046e1d9533e50fdc28445b01f1d0901c413dedc6d5f50fc0d8f  node-v4.7.1-headers.tar.xz
+011d4a50b31941b4dc09e3f9b5b082dc1176f9483a7a758c02de161a36778e7a  node-v4.7.1-linux-arm64.tar.gz
+0558537391e9a0a5eed74da174cd59bbe7a81f20b826fa4f5b628ea36ea6518e  node-v4.7.1-linux-arm64.tar.xz
+900fa798c5dee90b8252ec77de6296d5597e2950f4d0549c0a4ded77a89e48de  node-v4.7.1-linux-armv6l.tar.gz
+99461ce059c2e0febf10fc0fb2749db3106e997d2541843007c1b27d9ce714f0  node-v4.7.1-linux-armv6l.tar.xz
+94bc1a26a141e1d5505133cd6757c38f86aa4f6c45e6bf7bdbd67df558f14897  node-v4.7.1-linux-armv7l.tar.gz
+6041279519c0e13913729b7f68e1b6010a5abc95b29b13acbe4248b1219e9038  node-v4.7.1-linux-armv7l.tar.xz
+bf30bf15edaa0c23dd81424e37167bb1a4718af6d81a3f9f487c823e04a481ed  node-v4.7.1-linux-ppc64le.tar.gz
+d83f1e7d370069ef20faec3e3451bedbcea85852ad7766e4f3634efd57b1acbd  node-v4.7.1-linux-ppc64le.tar.xz
+658bbd4c4de4a603d1d4cc5ed8eab9120fda1c1bcab87423636f7342d6bb2f2c  node-v4.7.1-linux-ppc64.tar.gz
+92593e98f1caff6910c9c9cd5046e23e51768d87dc8c8a9c6a539a3149adb655  node-v4.7.1-linux-ppc64.tar.xz
+8076452319f8f30cb860cdcfed78853afa091643658d258306cb1005b4ccb083  node-v4.7.1-linux-x64.tar.gz
+bb2e97d675ff30c1526dc35489b42cb3fe4c74a6e476636be440c735236b640d  node-v4.7.1-linux-x64.tar.xz
+69292d3f44363a2e1671dd0342bc054f6b533b6fdfeba8a946efbbec945721b8  node-v4.7.1-linux-x86.tar.gz
+964bd168e95bf3abd9671dd45dd853d6e19e3769ec284fb35aac8e561908c8b8  node-v4.7.1-linux-x86.tar.xz
+5e2f6100414196054c2554f0e167cf61eb92b090b000304b25afc7cbc7a737df  node-v4.7.1.pkg
+e10263c854b1414eee4295a5e8f505a6f0844f1717f83934319eaaaf3d5673f6  node-v4.7.1-sunos-x64.tar.gz
+799854bf32435b6fd777548456c7c719abe82b0af2665982f3c2de29a48e4415  node-v4.7.1-sunos-x64.tar.xz
+c96025827ea9e86887d5c958701373b360e822b6147f5fcd60ab2c423f5b4db9  node-v4.7.1-sunos-x86.tar.gz
+f2b289e78d4412e7d48c99571deb6fdbf0883ad07bac328a59d95dcd7d2af5ad  node-v4.7.1-sunos-x86.tar.xz
+9c0472b8faf03758b6ff86e4a05d03e399b94b6b83c6c0847e5eaedb448a1c49  node-v4.7.1.tar.gz
+1e8582c5ef7905f55792cbae59ea32991d6d2821c6d52ef974ac3194d3728888  node-v4.7.1.tar.xz
+9a258648eda0adce92d1a05776bd5611083b3cdaaa78a2dede82ffd5641dd1b1  node-v4.7.1-win-x64.7z
+306e843bd80ce26536a72e43dca472f67a9f04d7b919e3dfce1fab2dab15aed2  node-v4.7.1-win-x64.zip
+a99c6d22da2457c7c3fd1776970f5ed57b805f1a2760e4086b3b3d21c96ac688  node-v4.7.1-win-x86.7z
+88a2a0338ef998c5347c2d04313feac07cc6e34b89b20b2481eb2adb715a997b  node-v4.7.1-win-x86.zip
+635f25715730799d2ee4a6034495d53c21f475e0b96fe5a5766db049e06cd671  node-v4.7.1-x64.msi
+822ca8434ff546c69b390ab40f58c2f1df45e77da72e160efee327ab3ccfa093  node-v4.7.1-x86.msi
+67ba62648b3ff1d921dd40969cfbed11056b162e9ba7334c28f72f5d53440560  win-x64/node.exe
+92105a369fdbf589220a6f03582b7a0806bdf3c05afa2b9d3b02898667d03b30  win-x64/node.lib
+45f73c3650b50352dfd07b564b8fc8820d3a880202408f573f3a1756eb74ffc4  win-x64/node_pdb.7z
+cad47a13e7d2e7cd84013c2b29bf5eb4082a7144d7e496a23693327049894b11  win-x64/node_pdb.zip
+8a85d55ab766c6bee2c16bb30425d90d0afe4128151fb5a5942d675c0ed8d934  win-x86/node.exe
+53f126f2288063f7b896d110e47d30e9f7b8fa9af1268db11f876be4092ab340  win-x86/node.lib
+cf420c118076e021f01eab2ea1b94fc26736cecff6d7713e773f5c880a57255e  win-x86/node_pdb.7z
+c674f91b6ac312b6ff3e44c32ee35bd87f3dbd492a291fb313be09704e6eff0c  win-x86/node_pdb.zip
+-----BEGIN PGP SIGNATURE-----
+
+iQEcBAEBCAAGBQJYboDxAAoJEJM7AfQLXKlGSe8H/1J5leva7Rm4aM3n1kJmSggk
+RYMb/PVfPe1EsYlor5HzxOgTONAqsNHF0WEy8zOKtRpAndnG4reTa0ZuVqp6v3o9
+M8ScEKPYe6llqZe9s9saQn4zmNygzSjrXuikkfPlSHkTo0iTZ6bita0d3V7oTQdS
+jj95Qg/vSDQFjInkDZ2yhDBMZ6lsCagu2ZdX/+XVPMo3PTwCpJt9N82VpKuPL/L2
+ZNDiYbXUWcOEzCRnnmULV5lvegW2NeMmxSnT+2w5zfL7MW62ltNJZTVoekf9+LTs
+j2YhP+82Xs8Q52PpjXLN4U6EAfAbRpqe3cKMKOnVDvJEnsidwHgkgmN7SiTl/7o=
+=vn1k
 -----END PGP SIGNATURE-----
 
 ```
