--- a/locale/en/blog/release/v4.7.2.md
+++ b/locale/en/blog/release/v4.7.2.md
@@ -8,13 +8,12 @@ layout: blog-post.hbs
 author: Myles Borins
 ---
 
-### Notable Changes
+## About this release
 
-N/A
-
-### Commits
-
-N/A
+This is a special release that contains 0 commits. While promoting additional
+platforms for v4.7.1 after the release, the tarballs on the release server were
+overwritten and now have different shasums. In order to remove any ambiguity
+around the release we have opted to do a semver patch release with no changes.
 
 Windows 32-bit Installer: https://nodejs.org/dist/v4.7.2/node-v4.7.2-x86.msi<br>
 Windows 64-bit Installer: https://nodejs.org/dist/v4.7.2/node-v4.7.2-x64.msi<br>
