--- a/locale/en/blog/release/v6.9.2.md
+++ b/locale/en/blog/release/v6.9.2.md
@@ -180,7 +180,7 @@ Linux PPC BE 64-bit Binary: https://nodejs.org/dist/v6.9.2/node-v6.9.2-linux-ppc
 Linux s390x 64-bit Binary: https://nodejs.org/dist/v6.9.2/node-v6.9.2-linux-s390x.tar.xz<br>
 AIX 64-bit Binary: https://nodejs.org/dist/v6.9.2/node-v6.9.2-aix-ppc64.tar.gz<br>
 SunOS 32-bit Binary: https://nodejs.org/dist/v6.9.2/node-v6.9.2-sunos-x86.tar.xz<br>
-SunOS 64-bit Binary: *Coming soon*<br>
+SunOS 64-bit Binary: https://nodejs.org/dist/v6.9.2/node-v6.9.2-sunos-x64.tar.xz<br>
 ARMv6 32-bit Binary: https://nodejs.org/dist/v6.9.2/node-v6.9.2-linux-armv6l.tar.xz<br>
 ARMv7 32-bit Binary: https://nodejs.org/dist/v6.9.2/node-v6.9.2-linux-armv7l.tar.xz<br>
 ARMv8 64-bit Binary: https://nodejs.org/dist/v6.9.2/node-v6.9.2-linux-arm64.tar.xz<br>
@@ -216,6 +216,8 @@ da766edda11cc38eefb1ce29683f248f40c997c0ee2e06903b01429b4c94b71a  node-v6.9.2-li
 9794a5af57f408635b4215ede49b52993ef6ac3fd33ed5188b05082455d5a439  node-v6.9.2-linux-x86.tar.gz
 9dae6ddbafcefd271c3df6e01633422dc7495479269fb1358e4c540929ef8835  node-v6.9.2-linux-x86.tar.xz
 4e1d594053e12bc4862d838e97669434d299eb08ba7b50f00cc0a6860afe558f  node-v6.9.2.pkg
+3306791cb1e1745084cef846e4e2f0d8751e29bc67d5fa3ef661661736fa1e71  node-v6.9.2-sunos-x64.tar.gz
+4cb6c4ee390de75338662eb5cd03b8e2efdc5dc4b4ce8598d8383d06afdd278e  node-v6.9.2-sunos-x64.tar.xz
 2f49758d6f0c868183924d925164530cd62a280ad291b683da1a9c41f757cf06  node-v6.9.2-sunos-x86.tar.gz
 fb75c64971c4c138a6d079063385aa548468bcd000e4eeffd22900e4e1930121  node-v6.9.2-sunos-x86.tar.xz
 997121460f3b4757907c2d7ff68ebdbf87af92b85bf2d07db5a7cb7aa5dae7d9  node-v6.9.2.tar.gz
@@ -235,15 +237,14 @@ a3d950ac9680cf74f4ba45f653f41b3fa5dce693ec9be9223ed1099f8a97fa58  win-x86/node.l
 db8aa9f25d9b36ddd4b8b1857b66dee59e714c53f9625eabd1ec947e0b109f79  win-x86/node_pdb.7z
 caff2db8611f2092cfcc107f3b4e6a93a77de7829384c9e2977c01a530039a3a  win-x86/node_pdb.zip
 -----BEGIN PGP SIGNATURE-----
-Comment: GPGTools - https://gpgtools.org
 
-iQEcBAEBCAAGBQJYRxOyAAoJEJM7AfQLXKlGcfIH/2gWdkrkuVICBFaYP/yvDnwO
-yPdAbFIcEcVPBCnEsaMd9SD44zJ58R5xtJzNXZRkt+72ABVCguKGThPEnzyssRPE
-4mFTOtPLHt/HfCi3W5MKz/FcQk6aLu11qz99ovzJPNMk+91Ya6/cgVOwQppbcFmE
-PhJfJCJLDptXcH9cOef0v7YiNtFEA7X/EY700jxsURTUi/dje7r35JDYMBt8NU59
-SmvbRgUZivGsCOePg9dxuT5yJT/jxGOHGsUW5npdbgmA9U8DgeShLxl6fwgYBrqc
-9uA+yKOy7ZOWDbNabAsmA6QM4Toiaa7UwpaWsCnMR4K5Ur1qn+Hr7w3Og0tHI98=
-=ZZcA
+iQEcBAEBCAAGBQJYbosfAAoJEJM7AfQLXKlGtQMH/3xZcjqSpB5W/GuKsa2zU/X1
+rFNJvroPH6a4hwcYt70o/5rnF7WHMg3x9SCDIOnIQPvYMvNtnYMSYOCyFjeiuqu1
+Q2kD2jRWi24X1WEUok7fG5TdFSkNd4cJHSUOiMzagcx7x539zpDuAKg8jk3bFn2c
+QKnFX1F1F6rM33CoxPr7X95433ZO/Qt1ZBo7bXGLMvcHFg7xkGZTtW6jPYC+hPj1
+63sGe21KeyyvFjqVCsNzSlVLDipVFOpN/EE8G2Wg9HNl6NptvE3PiWmDbO7il+kN
+x440CnHH9wimE3C1+Xm/rWy9JRZVd4dZUWzfN0s+UkWjPToHed9Ff9j73ud5mag=
+=M70i
 -----END PGP SIGNATURE-----
 
 ```
