--- a/locale/en/blog/release/v6.9.3.md
+++ b/locale/en/blog/release/v6.9.3.md
@@ -8,6 +8,11 @@ layout: blog-post.hbs
 author: Myles Borins
 ---
 
+While promoting additional platforms for v6.9.3 after the release, the tarballs
+on the release server were overwritten and now have different shasums. In order
+to remove any ambiguity around the release we have opted to do a semver patch
+release, v6.9.4, with no changes.
+
 ### Notable Changes
 
 * **build**: shared library support is now working for AIX builds (Stewart Addison) [#9675](https://github.com/nodejs/node/pull/9675)
@@ -346,11 +351,11 @@ macOS 64-bit Binary: https://nodejs.org/dist/v6.9.3/node-v6.9.3-darwin-x64.tar.g
 Linux 32-bit Binary: https://nodejs.org/dist/v6.9.3/node-v6.9.3-linux-x86.tar.xz<br>
 Linux 64-bit Binary: https://nodejs.org/dist/v6.9.3/node-v6.9.3-linux-x64.tar.xz<br>
 Linux PPC LE 64-bit Binary: https://nodejs.org/dist/v6.9.3/node-v6.9.3-linux-ppc64le.tar.xz<br>
-Linux PPC BE 64-bit Binary: *Coming soon*<br>
+Linux PPC BE 64-bit Binary: https://nodejs.org/dist/v6.9.3/node-v6.9.3-linux-ppc64.tar.xz<br>
 Linux s390x 64-bit Binary: https://nodejs.org/dist/v6.9.3/node-v6.9.3-linux-s390x.tar.xz<br>
 AIX 64-bit Binary: https://nodejs.org/dist/v6.9.3/node-v6.9.3-aix-ppc64.tar.gz<br>
-SunOS 32-bit Binary: https://nodejs.org/dist/v6.9.3/node-v6.9.3-sunos-x86.tar.xz<br>
-SunOS 64-bit Binary: *Coming soon*<br>
+SunOS 32-bit Binary: https://nodejs.org/dist/v6.9.3/node-v6.9.3-sunos-x32.tar.xz<br>
+SunOS 64-bit Binary: https://nodejs.org/dist/v6.9.3/node-v6.9.3-sunos-x64.tar.xz<br>
 ARMv6 32-bit Binary: https://nodejs.org/dist/v6.9.3/node-v6.9.3-linux-armv6l.tar.xz<br>
 ARMv7 32-bit Binary: https://nodejs.org/dist/v6.9.3/node-v6.9.3-linux-armv7l.tar.xz<br>
 ARMv8 64-bit Binary: https://nodejs.org/dist/v6.9.3/node-v6.9.3-linux-arm64.tar.xz<br>
@@ -360,6 +365,7 @@ Documentation: https://nodejs.org/docs/v6.9.3/api/
 
 <h3 id="shasums">SHASUMS</h3>
 
+<h4> The Original SHASUMS </h4>
 ```
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
@@ -413,6 +419,66 @@ awlPLIQENI1UxbjMXiOz1TOquP0J6PVUONd3Qe3qJ3oLG8e4aPDha75SFE84vvqa
 VnsFKMi45ngzt0nBrxW+ASpahPdEGgeJ1IIXYXG9sdCZBR+J0MYYL/r7HGmx6HlS
 jwYtJHsz/zd76JKpRnekk1m8VgEA9o7wRyUSI7bepRw2Q67wv3rFGG7IQHlccLU=
 =XtXG
+-----END PGP SIGNATURE-----
+
+```
+
+<h4> The Current SHASUMS </h4>
+```
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
+ced91ebd70173714117e3d4787036b7047c5000ab28896ac128fbd3607dd99f1  node-v6.9.3-aix-ppc64.tar.gz
+a313821570ac5ba5ce66e13a5ba3064bff07e076393d66fcda16fe7e1a2fbd46  node-v6.9.3-darwin-x64.tar.gz
+0d9884db10675f216627bf2564b07bcf69c76014f9371bea4d8da8a6af71f137  node-v6.9.3-darwin-x64.tar.xz
+abd4571c984f9a75fe707e0e494112e2e70a4eebb6f9794c5ae6fef12620e847  node-v6.9.3-headers.tar.gz
+3a549c28f606e281de93a05ab6e71c22854d0bc446a31171f79f0ff099e804bd  node-v6.9.3-headers.tar.xz
+2b0aec9caf1afb5b4cb417dafb2701a2a104e669a0dcb2005497c7f636211ed8  node-v6.9.3-linux-arm64.tar.gz
+a45a79d03b48704e140a640a45130aa7b84be9e57f070f9aade8448ce07d18dc  node-v6.9.3-linux-arm64.tar.xz
+a9d165c32a0d9c55ef0dcc0e043951af4e1d2283ebdc18defcd1715d0d3cdb4a  node-v6.9.3-linux-armv6l.tar.gz
+9b83ae8015902ab296782b1ac4083f742093e814605ba7e71c642839fe4d434f  node-v6.9.3-linux-armv6l.tar.xz
+ba7cec96cf4893ac5eaf2aaf8768cf8e5d7b69ecf25a48e18e8832183fc39e9a  node-v6.9.3-linux-armv7l.tar.gz
+d86187fbf2ee4875438cc8fc53506db998398f165227ec162160a6fedef957cf  node-v6.9.3-linux-armv7l.tar.xz
+df59c6bd0b2de004fcec8101f2f671107f63a3e29d436eb02c922348a423fcc2  node-v6.9.3-linux-ppc64le.tar.gz
+a4d708f07a44a534c85ddc3a35d0557ce9412af3ad2a16373a871cea104942fd  node-v6.9.3-linux-ppc64le.tar.xz
+979f1bec0deac73fdaf45c07f121f9ab7fad0f28c1543710851c878c4a14ac12  node-v6.9.3-linux-ppc64.tar.gz
+2227f81699effb0ef9582582e5ad40172a1378aa1b1a0ece0a7a67083f94491d  node-v6.9.3-linux-ppc64.tar.xz
+3acc43559272d5e2d17cc2eab797cc8646e16daa1655dbbceecccc18bc6cbf5f  node-v6.9.3-linux-s390x.tar.gz
+09f428e4598be8d289a4c49e4dad1491335a15527fb6277cd542034b8772fa4d  node-v6.9.3-linux-s390x.tar.xz
+5957fd9b65c346f0d0afb1adc8bde98fa04bf613ee51ef9570d287bda73314a2  node-v6.9.3-linux-x64.tar.gz
+f072719f5810a0fd8ba1d882eb19e546d54bf675b393b8478ff89b304669876b  node-v6.9.3-linux-x64.tar.xz
+fd25af7ac2728d2321417dfaa408c2f29a8fc1a230f9dbda1a43a2345e6be338  node-v6.9.3-linux-x86.tar.gz
+5fd85f7e99bff5e3fa23293bb379ff8f0063c6dbf9bc6caa7bcb160edd38d76b  node-v6.9.3-linux-x86.tar.xz
+7616af707e37081c75a3c80f43ce7983514bec051186f61e0349ed125ecf6e2a  node-v6.9.3.pkg
+229b336d9be8ce86a0a3d96ef11333df2e3fd2b57cfc4e54bb2355e0b6215a97  node-v6.9.3-sunos-x64.tar.gz
+edfb132cd42a51524a7a5b9970db65ba188667f74cefbadb51a3a44f1263c46f  node-v6.9.3-sunos-x64.tar.xz
+36cbeeed50d4539cc650a7373c79f553d5ef44038e6ffe7d296553d1a12b0443  node-v6.9.3-sunos-x86.tar.gz
+a97a83f05234cf7a27bbaa6c680795a163496e07f7f801b8773c6f660fe1f51d  node-v6.9.3-sunos-x86.tar.xz
+74b3a5c5419c674598376eefd435f472e9a36a3c27029b5fa64ba3037ed08fc9  node-v6.9.3.tar.gz
+d1ece6ef97837367f36c3259a0fb48e0e0574682e5b8370e6b4d809ba02d1e97  node-v6.9.3.tar.xz
+abc083584830e01042655c18c9fd178177835da72ace54489163a65613091068  node-v6.9.3-win-x64.7z
+a6670c5790052c626e72bc5a0ef983236a54a71de784076784e8565688fcf7fc  node-v6.9.3-win-x64.zip
+3613a8d0aa30450b8803d06badd42eaecffb37978ff691e557657a93c87cccf0  node-v6.9.3-win-x86.7z
+338c19fbb7d7655fea1ccb65b85299269420ffa1f1b10cc0362d10ce6b7e818e  node-v6.9.3-win-x86.zip
+7c4829e708ae9491b8af76c45ac5ab0eeeb04f084527d049b673a054a084bf11  node-v6.9.3-x64.msi
+b94eb09987990fc4b5dfa6df16106d23ad8089b26a9b87c0576de98aacbcfb69  node-v6.9.3-x86.msi
+2551c19ee4e6c03ce55dd916ee4dfcbcfec3cd71300164abf4be8a06b77c2ea4  win-x64/node.exe
+c8ec2fae6968ff9ebf056fa95a42f7edc25146a46c1f70429d76d6acb4474a0f  win-x64/node.lib
+18d84d29c7472bdc3974490e7dfcc7d6a4fd50a9d7a126351a13fa644d453d8f  win-x64/node_pdb.7z
+83503d437d7869575bb69c02203b29871a4a51301bf8118aa391ed732a56b114  win-x64/node_pdb.zip
+4d803cde8e701c67c434b05232f2686fa4dd1317a19dacc1e2f76d6219b85feb  win-x86/node.exe
+54b43a3f880a175d75faead2a20a4a56103ba29ab6d325092d835cc480dc5b63  win-x86/node.lib
+a672dcf5206896ae1925273173c5ef7d4b7aec39dcb98929170b0e68a03aeafa  win-x86/node_pdb.7z
+2db6c76614c56b4b43ad4ffc47b9bdab5e6fc548358eeff877e193e54c751ee9  win-x86/node_pdb.zip
+-----BEGIN PGP SIGNATURE-----
+
+iQEcBAEBCAAGBQJYboFHAAoJEJM7AfQLXKlGm60H/3PiC12GfzfGxAQZLWBTDuaG
+LJhc7xY5E3xCtTo9DmQtk6AhBxtSJf0hwUdw+g0n2MEmim8OXkm/x8Au9pcvCpzP
+rJ79NBedxvri6fQ9HngRH8oODKMCVgG5qafL0c1N1I53wNK/3dmD/9oh1Nw4ZHvd
+gDkH1ZxMEwCKLpXWzT0xEjVkKwNyJZ/yGylVwAkKTv0KPUTGYVjO3SvJcDw/r3w8
+sKcSdHi7d81qgR2wjEj8V2m79tGPDmnrg8LBZsNbePhmHsoFtggJyWataco+gjmm
+wfCnZ0MpJJuqaIBPswPYiyeTBau6r4h6coIpgGSRtvEqliD03+IQvS9FTFomuCU=
+=EJXd
 -----END PGP SIGNATURE-----
 
 ```
