nodejs-ko: Update files - all files (#1032)

--- a/locale/ko/site.json
+++ b/locale/ko/site.json
@@ -10,6 +10,7 @@
     "by": "by",
     "all-downloads": "모든 다운로드 보기",
     "nightly": "나이틀리 빌드",
+    "chakracore-nightly": "Node-ChakraCore 나이틀리 빌드",
     "feeds": [
         {
             "link": "feed/blog.xml",
