Blog: update v6.10.0 release

--- a/locale/en/blog/release/v6.10.0.md
+++ b/locale/en/blog/release/v6.10.0.md
@@ -208,7 +208,7 @@ Linux s390x 64-bit Binary: https://nodejs.org/dist/v6.10.0/node-v6.10.0-linux-s3
 AIX 64-bit Binary: https://nodejs.org/dist/v6.10.0/node-v6.10.0-aix-ppc64.tar.gz<br>
 SunOS 32-bit Binary: https://nodejs.org/dist/v6.10.0/node-v6.10.0-sunos-x86.tar.xz<br>
 SunOS 64-bit Binary: https://nodejs.org/dist/v6.10.0/node-v6.10.0-sunos-x64.tar.xz<br>
-ARMv6 32-bit Binary: *Coming soon*<br>
+ARMv6 32-bit Binary: https://nodejs.org/dist/v6.10.0/node-v6.10.0-linux-armv6l.tar.xz<br>
 ARMv7 32-bit Binary: https://nodejs.org/dist/v6.10.0/node-v6.10.0-linux-armv7l.tar.xz<br>
 ARMv8 64-bit Binary: https://nodejs.org/dist/v6.10.0/node-v6.10.0-linux-arm64.tar.xz<br>
 Source Code: https://nodejs.org/dist/v6.10.0/node-v6.10.0.tar.gz<br>
@@ -228,6 +228,8 @@ c00c9cb2a90b59c5d7d6960729a28dca03c04521ec8386710d48fe5676eccf11  node-v6.10.0-h
 12b4dc83ffdf149d9a38351b9bf22c167faa196c632d0a2047d5d06aacddf427  node-v6.10.0-headers.tar.xz
 5f4024d2df1708ef80c5e7b1606d972e8f9779b350df832932174ce651e7795f  node-v6.10.0-linux-arm64.tar.gz
 fc020ac1c3e6d3148ff353dd3b2b11017e556cabf405e385392f599ce34cdf16  node-v6.10.0-linux-arm64.tar.xz
+dc529455b6f85a5c9ba2e6709ca90d580ac297cb39a8444a90e2d579761f211f  node-v6.10.0-linux-armv6l.tar.gz
+41f5c6c106e8f3da4e139364739fcbbbc21012984533e2b6b33a61b234a40b3f  node-v6.10.0-linux-armv6l.tar.xz
 7b068e6a1090ca0765455f35f99a2c090690ac8312d4a410ef481960f79216d8  node-v6.10.0-linux-armv7l.tar.gz
 95efb476886df15cc6586dd26ecc50834a768e347cf95e861461853cfb40fc78  node-v6.10.0-linux-armv7l.tar.xz
 44a9fbd5870d7fa45a50fcb1c14864b3c9d7500d2e42e611e5ad71d9c99e176b  node-v6.10.0-linux-ppc64le.tar.gz
@@ -263,13 +265,13 @@ eccab63147ec453ac2103ebfcb719a83b0dc0778c6a5c096b314ed42c011d58a  win-x86/node_p
 53eeebba3f95fbc886944cf9f2945cf2e87fe81a40910da0b76cb5bf1c1c513a  win-x86/node_pdb.zip
 -----BEGIN PGP SIGNATURE-----
 
-iQEcBAEBCAAGBQJYrPLmAAoJEJM7AfQLXKlGMpsH/2Sxa3v2MmYYELUzVGQvtJ64
-I+n50UlRrf1aa5bUtvbF4MlNmmCouy0lA844lgfoEfz62dASwAPwSFD/HNL8WYWP
-gy/Lc5nJk8gHxCxRDxuL37NPrrYrb0wNUR9heNo2bGIeduAgeQClMfAHBQq/gKW0
-mgPfJT00ULGm1GwDqHAQiemtz3QTNzTVYEPlIDh/oL6BedT5SQMGn54PB18RaT6D
-/8tPTKnaqTPQFi1os2u4qbsodhOW+zbHUXoshZ5T5QtMRtgMqdCjKCXzmgKK04KF
-B5J6cZ6kmZhfYVH4ZTfXlSqglop6tnwJWQxZoOXU/aiJnl/h5OfkyeZhncruFbU=
-=w2Vh
+iQEcBAEBCAAGBQJYraegAAoJEJM7AfQLXKlGWUQH/0o5j/V/Zr1+wNPAJ8nThmx0
+04hWMPYh6rU0wWi+QY7dUilEOjKgixNM5EgzcrEtdvTmFtfUFgaABduxVyIcd8L0
+QGYSmUbcdygS4CfTcIRnf9yvVPF3wB9q+YObATtOgTEUspp3+02A85enQLV1CCb9
+4vdRnHmlArg1eWcpLkgIliQ2DySHcAjB/wE63T60TxiTnrayza1L0D+ecnaqJYfw
+aVRQp4o2xO8cYCLOvVArBECzJzE9lPtcImN177f2wLyES5laEYAOXfl5ZHnxJt9I
+go6+ePtLEgTtOubm9jUox3U5ZdcYPNv+1yJhlYImqp4O9sWMI+ruNIWXCwkqqrE=
+=YG3A
 -----END PGP SIGNATURE-----
 
 ```
