docs: move and update inspector help
PR-URL: https://github.com/nodejs/nodejs.org/pull/1216
Reviewed-By: Luigi Pinca <luigipinca@gmail.com>
Reviewed-By: Jan Krems <jan.krems@gmail.com>

--- a/locale/en/site.json
+++ b/locale/en/site.json
@@ -85,6 +85,10 @@
             "link": "docs/faq",
             "text": "FAQ"
         },
+        "inspector": {
+            "link": "docs/inspector",
+            "text": "Inspector"
+        },
         "api-lts": {
             "link": "/dist/latest-%ver-major%/docs/api",
             "subtext": "LTS",
