--- a/locale/en/blog/release/v8.0.0.md
+++ b/locale/en/blog/release/v8.0.0.md
@@ -200,12 +200,12 @@ AssertionError [ERR_ASSERTION]: false == true
 
 Information for static error codes can be queried quickly by referencing the
 Node.js documentation. For instance, the URL to lookup information about the
-`ERR_ASSERTION` error code is
-https://nodejs.org/dist/latest-v7.x/docs/api/errors.html#ERR_ASSERTION.
+`ERR_ARG_NOT_ITERABLE` error code is
+https://nodejs.org/dist/latest-v8.x/docs/api/errors.html#ERR_ARG_NOT_ITERABLE.
 
 ### Redirecting Process Warnings
 
-Processing warnings such as deprecations may now to redirected to a file by
+Processing warnings such as deprecations may now be redirected to a file by
 using either the `--redirect-warnings={file}` command line argument or matching
 `NODE_REDIRECT_WARNINGS={file}` environment variable. Rather than printing
 warnings out to `stderr` by default, warnings will be written out to the
@@ -299,8 +299,8 @@ we've dropped the "v" and call it Node.js 8.
 
 * **Dependencies**
   * The npm client has been updated to 5.0.0
-    [[`3c3b36af0f`](https://github.com/nodejs/node/commit/3c3b36af0f)]
-    [#12936](https://github.com/nodejs/node/pull/12936).
+    [[`c58cea5`](https://github.com/nodejs/node/commit/c58cea5)]
+    [#13276](https://github.com/nodejs/node/pull/13276).
   * V8 has been updated to 5.8 with forward ABI stability to 6.0
     [[`60d1aac8d2`](https://github.com/nodejs/node/commit/60d1aac8d2)]
     [#12784](https://github.com/nodejs/node/pull/12784).
@@ -366,7 +366,7 @@ we've dropped the "v" and call it Node.js 8.
 
 * **Src**
   * `NODE_MODULE_VERSION` has been updated to 57
-    (https://github.com/nodejs/node/commit/ec7cbaf266)]
+    [[`ec7cbaf266`](https://github.com/nodejs/node/commit/ec7cbaf266)]
     [#12995](https://github.com/nodejs/node/pull/12995).
   * Add `--pending-deprecation` command-line argument and
     `NODE_PENDING_DEPRECATION` environment variable
