blog: add armv7 and aix builds to 8.1.0 post
PR-URL: https://github.com/nodejs/nodejs.org/pull/1258

--- a/locale/en/blog/release/v8.1.0.md
+++ b/locale/en/blog/release/v8.1.0.md
@@ -167,10 +167,10 @@ Linux 64-bit Binary: https://nodejs.org/dist/v8.1.0/node-v8.1.0-linux-x64.tar.xz
 Linux PPC LE 64-bit Binary: https://nodejs.org/dist/v8.1.0/node-v8.1.0-linux-ppc64le.tar.xz<br>
 Linux PPC BE 64-bit Binary: https://nodejs.org/dist/v8.1.0/node-v8.1.0-linux-ppc64.tar.xz<br>
 Linux s390x 64-bit Binary: https://nodejs.org/dist/v8.1.0/node-v8.1.0-linux-s390x.tar.xz<br>
-AIX 64-bit Binary: *Coming soon*<br>
+AIX 64-bit Binary: https://nodejs.org/dist/v8.1.0/node-v8.1.0-aix-ppc64.tar.gz<br>
 SunOS 32-bit Binary: https://nodejs.org/dist/v8.1.0/node-v8.1.0-sunos-x86.tar.xz<br>
 SunOS 64-bit Binary: https://nodejs.org/dist/v8.1.0/node-v8.1.0-sunos-x64.tar.xz<br>
-ARMv6 32-bit Binary: *Coming soon*<br>
+ARMv6 32-bit Binary: https://nodejs.org/dist/v8.1.0/node-v8.1.0-linux-arm64.tar.xz<br>
 ARMv7 32-bit Binary: https://nodejs.org/dist/v8.1.0/node-v8.1.0-linux-armv7l.tar.xz<br>
 ARMv8 64-bit Binary: https://nodejs.org/dist/v8.1.0/node-v8.1.0-linux-arm64.tar.xz<br>
 Source Code: https://nodejs.org/dist/v8.1.0/node-v8.1.0.tar.gz<br>
@@ -183,12 +183,15 @@ Documentation: https://nodejs.org/docs/v8.1.0/api/
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
+53db5aea2ebea852be456ad5829b5d4bd7894bc40982bce247639b838543d574  node-v8.1.0-aix-ppc64.tar.gz
 08af5f1a7441728cabf9b11af25da28ee1725903524968dd9621b885b13303c7  node-v8.1.0-darwin-x64.tar.gz
 8c2583f95c223dae996310573611f6cc7212942b32ff653c2a88583c1edd629f  node-v8.1.0-darwin-x64.tar.xz
 38ce729d4b13d31e74f1ed8dd8b123b1e8aa015611eb6c7b3225a0677e9e38ef  node-v8.1.0-headers.tar.gz
 18b42870b145ea756e8539a9c27317f3e75d0b7638f3907ab29f67b2f96ca0e5  node-v8.1.0-headers.tar.xz
 33c09d04b5e2637feda241e1c727b10249ed7114ad7807f8b70cbd8414747649  node-v8.1.0-linux-arm64.tar.gz
 adf2f517c9847cbb5904b282c0819526b5264c256477ed5e4b258584daa1a2ea  node-v8.1.0-linux-arm64.tar.xz
+9c5ce836cd2a90bd1824620b10c75e4e9ec0e80c04d7b09aade2173f03bf61c7  node-v8.1.0-linux-armv6l.tar.gz
+3bbca586b4d44c5458ff48c08d0437a6bad361f3550c801a28c46467e3bbe73f  node-v8.1.0-linux-armv6l.tar.xz
 12d75aa7d875115e03e62b1e65aba77902d9c810bfb81fe8c379c5667d8fa1e1  node-v8.1.0-linux-armv7l.tar.gz
 8a7db124e9f8fb884e777a75410ff63f6247d26a9eb6dab2879f3d1eb67fa958  node-v8.1.0-linux-armv7l.tar.xz
 d230f546a8162236bc4272013a53d8bc86b72c40fe94e972b39ac74ed0563eb8  node-v8.1.0-linux-ppc64le.tar.gz
@@ -224,13 +227,12 @@ a059b7d0625875beeed10b15a0cf2e7f52c732e38a6e0cba48074ac1f24a5b5d  node-v8.1.0-x8
 1e2528eed30b005ff0cc9fb46596e4ce935ee6103440df44409053eea6e1a532  win-x86/node_pdb.zip
 -----BEGIN PGP SIGNATURE-----
 
-iQEcBAEBCAAGBQJZOS1NAAoJEMJzeS99g1RdemQH/RCBBPOgL3Ws6O7jPUTSOGjI
-80XpnybbhLuiPOAh3us3vGE/uDem9PDSrvoIpDuKx5QaE7HX1kYfapROJrp3zK1R
-rgcrhnhqmbBl1r46qYKclQerIaXGh5x8XKma6zkmgsUIViUS++ol11wxkuSKAm/j
-4nh6m95twR/93QFEtLwr10FDAdSVWTzNH5Xhw10qMTrCm3NNiRBZuCZaazUKGxK4
-J6y6X98Y8q5RFcBTMNhOIpDPjrpddTXcm5j9rP/sVUgSYIpj212b39MZTti7Ofl9
-4V7mHeXTPCeJQqNwcqRR30C+Qha5L2bbSiBx6YAuvij9lzHrPtcdeye7/z9yuFk=
-=J9oI
+iQEcBAEBCAAGBQJZOfasAAoJEMJzeS99g1RdQ5IH/1t+8azgrue+cL/6y7capl1+
+LQycAW1NOTB8WzjgTVSSAF03aw5D6sSCuKcrhk2vd3lWzx8tdJjXBPZ+fz1IEQ3q
+nrf73cOc0lJV1h94orFBrj2SGcQBm7eRI4gsd/Msmi3cL3lsmWxrhbrfC/pCw/Gt
++uQiGpCv/4huuDAUUDzVaBD/WY1KIw3P6r65CjdKfuf9hpZWEFFNlz8zz//K0eOv
+0cKy5fan1cCeb2u8kCKtdEcFV4s9dv0HqXutqQUJhU1p2vP1RfM//rzYey4Etjwq
+n5Qm7Lmo2E75pk6B5GfFVEzX1kGVZRn25/LUnfcEk/0ww8axgJexNbnwh4YScuE=
+=BysF
 -----END PGP SIGNATURE-----
-
 ```
